# list

./: CMakeLists.txt
include/: list.h  node.h
lib/: list.c  node.c
tests/: test.c
